--- a/fhsa/v4/out.html
+++ b/fhsa/v4/out.html
@@ -1291,15 +1291,20 @@ Other reason
 
 <script src="/etc/designs/canada/wet-boew/méli-mélo/2023-10-mount-revelstoke.min.js"></script>
 <script>
-	$(":input[type=checkbox][name=action-checkbox]").change(function() { 
-          if ($(":input[type=checkbox][name=action-checkbox]:checked").length === $(":input[type=checkbox][name=action-checkbox]").length) {                
-            $("#action-not-qualify-msg").addClass("hidden").removeClass("visible");
-	    $("#action-qualify-msg").removeClass("hidden").addClass("visible");
-          } else {
-            $("#action-qualify-msg").addClass("hidden").removeClass("visible");
-	    $("#action-not-qualify-msg").removeClass("hidden").addClass("visible");
-          }
-        })
+	let updateCheckboxes = function() { 
+            if ($(":input[type=checkbox][name=action-checkbox]:checked").length === $(":input[type=checkbox][name=action-checkbox]").length) {                
+                $("#action-not-qualify-msg").addClass("hidden").removeClass("visible");
+                $("#action-qualify-msg").removeClass("hidden").addClass("visible");
+            } else {
+                $("#action-qualify-msg").addClass("hidden").removeClass("visible");
+                $("#action-not-qualify-msg").removeClass("hidden").addClass("visible");
+            };
+
+        if ($(":input[type=checkbox][name=action-checkbox]:checked").length > 0) {
+            updateCheckboxes();
+	}
+
+	$(":input[type=checkbox][name=action-checkbox]").change(updateCheckboxes()});
 </script>
 </body>
 </html>
