--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -179,7 +179,8 @@
 </script--></div>
   <div class="mwsbodytext text parbase section">
 	   <h2 id="toc0">[Purpose of page]</h2>
-	     <p>Determine the total income tax you will pay by identifying your taxable income threshold (tax bracket), using the different tax rates based on your location, and calculating your combined tax rate.</p>
+	     <p>Determine the total income tax you will pay by:</p>
+	  <ul><li>identifying your taxable income threshold (tax bracket)</li></ul>using the different tax rates based on your location, and calculating your combined tax rate.</p>
     <p>Taxable income is your income after various deductions, credits, and exemptions have been applied. It is line 26000 of your Income Tax and Benefit Return.</p>
 	  
     <h2 id="toc1">2023 - Federal rates</h2>
