--- a/fhsa/v4/out.html
+++ b/fhsa/v4/out.html
@@ -1304,7 +1304,7 @@ Other reason
             updateCheckboxes();
 	}
 
-	$(":input[type=checkbox][name=action-checkbox]").change(updateCheckboxes()});
+	$(":input[type=checkbox][name=action-checkbox]").change(updateCheckboxes());
 </script>
 </body>
 </html>
