--- a/fhsa/v4/out.html
+++ b/fhsa/v4/out.html
@@ -1305,7 +1305,7 @@ Other reason
             updateCheckboxes();
 	}
 
-	$(":input[type=checkbox][name=action-checkbox]").change(updateCheckboxes());
+	$(":input[type=checkbox][name=action-checkbox]").change(function () {updateCheckboxes()});
 </script>
 </body>
 </html>
