--- a/fhsa/v4/out.html
+++ b/fhsa/v4/out.html
@@ -1290,7 +1290,9 @@ Other reason
 <script src="/etc/designs/canada/wet-boew/js/theme.min.js"></script>
 
 <script src="/etc/designs/canada/wet-boew/méli-mélo/2023-10-mount-revelstoke.min.js"></script>
-<script>
+<script defer>
+	"use strict";
+	
 	let updateCheckboxes = function() { 
             if ($(":input[type=checkbox][name=action-checkbox]:checked").length === $(":input[type=checkbox][name=action-checkbox]").length) {                
                 $("#action-not-qualify-msg").addClass("hidden").removeClass("visible");
