--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -1054,7 +1054,7 @@ Other reason
 <script src="/etc/designs/canada/wet-boew/js/theme.min.js"></script>
 
 <script src="/etc/designs/canada/wet-boew/méli-mélo/2023-10-mount-revelstoke.min.js"></script>
-<script defer>
+<script>
 	"use strict";
 	
 	let updateCheckboxes = function() { 
@@ -1066,10 +1066,6 @@ Other reason
                 $("#action-not-qualify-msg").removeClass("hidden").addClass("visible");
             }
 	};
-
-        if ($(":input[type=checkbox][name=action-checkbox]:checked").length > 0) {
-            updateCheckboxes();
-	}
 
 	$(":input[type=checkbox][name=action-checkbox]").change(function () {updateCheckboxes()});
 </script>
