--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -1054,7 +1054,7 @@ Other reason
 <script src="/etc/designs/canada/wet-boew/js/theme.min.js"></script>
 
 <script src="/etc/designs/canada/wet-boew/méli-mélo/2023-10-mount-revelstoke.min.js"></script>
-<script>
+<script defer>
 	"use strict";
 	
 	let updateCheckboxes = function() { 
@@ -1068,6 +1068,8 @@ Other reason
 	};
 
 	$(":input[type=checkbox][name=action-checkbox]").change(function () {updateCheckboxes()});
+
+	window.onload = updateCheckboxes();
 </script>
 </body>
 </html>
