--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -1069,7 +1069,7 @@ Other reason
 
 	$(":input[type=checkbox][name=action-checkbox]").change(function () {updateCheckboxes()});
 
-	window.onload = updateCheckboxes();
+	$(document).ready(updateCheckboxes());
 </script>
 </body>
 </html>
