--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -139,7 +139,7 @@
     <nav role="navigation">
       <h2 class="h3">On this page</h2>
       <ul>
-	           <li><a href="#toc0">[Purpose of page]</a></li>
+	           <li><a href="#toc0">Overview</a></li>
         <li><a href="#toc1">2023 - Federal rates</a></li>
         <li><a href="#toc2">2023 - Provincial and territorial rates</a> </li>
         <li><a href="#toc3">Calculate the tax</a> </li>
@@ -178,9 +178,10 @@
 
 </script--></div>
   <div class="mwsbodytext text parbase section">
-	   <h2 id="toc0">[Purpose of page]</h2>
+	   <h2 id="toc0">Overview</h2>
 	     <p>Determine the total income tax you will pay by:</p>
-	  <ul><li>identifying your taxable income threshold (tax bracket)</li>
+	  <ul>
+		  <li>identifying your taxable income threshold (tax bracket)</li>
 	   <li>using the different tax rates based on your location</li>
 	 <li>calculating your combined tax rate</li>
 	  </ul>
