--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -188,8 +188,7 @@
 	  
 	  
 	 
-    <p>Taxable income is your income after various deductions, credits, and exemptions have been applied.</p>
-	  <p>It is line 26000 of your Income Tax and Benefit Return.</p>
+    <p>Taxable income is your income after various deductions, credits, and exemptions have been applied. It is line 26000 of your Income Tax and Benefit Return.</p>
 	  
     <h2 id="toc1">2023 - Federal rates</h2>
 	  <p>The Government of Canada sets the federal income tax rates for individuals.</p>
@@ -302,8 +301,10 @@
         </ul>
       </div>
     </div>
+
+	
     <details>
-      <summary class="max-content">Example 1 - Calculation for 2023 combined tax rate (on taxable income of $49,000)</summary>
+      <summary class="max-content">Calculation for 2023 combined tax rate on taxable income of $49,000</summary>
       <p>In <strong>2023</strong>, Ellis lives in <strong>Ontario</strong> and has a taxable income of <strong>$49,000</strong>. Ellis’ tax calculation would be as follows:</p>
       <p class="h3">Federal tax</p>
 	    
@@ -352,8 +353,8 @@
 
 	  
     <details>
-      <summary class="max-content">Example 2 - Calculation for 2023 combined tax rate (on taxable income of $79,000)</summary>
-      <p>In <strong>2023</strong>, Amari lives in <strong>Nova Scotia</strong> and has a taxable income of <strong>$79,000</strong>. Amari’s tax calculation would be as follows:</p>
+      <summary class="max-content">Calculation for 2023 combined tax rate on taxable income of $78,000</summary>
+      <p>In <strong>2023</strong>, Quinn lives in <strong>Saskatchewan</strong> and has a taxable income of <strong>$78,000</strong>. Quinn’s tax calculation would be as follows:</p>
   <p class="h3">Federal tax</p>
       <p>The first $53,359 is taxed at 15% (the first tax threshold), which equals $8,003.85.</p>
 
@@ -401,11 +402,7 @@
     </details>
 
 	  
-    <details>
-      <summary class="max-content">Example 3 - Calculation for 2023 combined tax rate (on taxable income of $108,000)</summary>
-      <p>In 2023, Quinn lives in Alberta and has a taxable income of $110,000. Quinn’s tax calculation would be as follows:</p>
-
-    </details>
+    
 <br>
  <p>Step 5 of the Income Tax and Benefit Return is where to calculate your federal tax on taxable income. Federal non-refundable tax credits are also calculated on this return.</p>
     <p>Form 428 within your respective province or territory’s income tax package is used to calculate your provincial or territorial tax on taxable income. Provincial and territorial non-refundable tax credits are also calculated on Form 428.</p>
