--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -140,8 +140,8 @@
       <h2 class="h3">On this page</h2>
       <ul>
 	           <li><a href="#toc0">Overview</a></li>
-        <li><a href="#toc1">2023 - Federal rates</a></li>
-        <li><a href="#toc2">2023 - Provincial and territorial rates</a> </li>
+        <li><a href="#toc1">Federal rates for 2023</a></li>
+        <li><a href="#toc2">Provincial and territorial rates for 2023</a> </li>
         <li><a href="#toc3">Calculate the tax</a> </li>
         <li><a href="#toc4">Previous years</a></li>
       </ul>
@@ -190,7 +190,7 @@
 	 
     <p>Taxable income is your income after various deductions, credits, and exemptions have been applied. It is line 26000 of your Income Tax and Benefit Return.</p>
 	  
-    <h2 id="toc1">2023 - Federal rates</h2>
+    <h2 id="toc1">Federal rates for 2023</h2>
 	  <p>The Government of Canada sets the federal income tax rates for individuals.</p>
 	   
 	
@@ -210,7 +210,7 @@
      </div>
 	 <p><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/frequently-asked-questions-individuals/adjustment-personal-income-tax-benefit-amounts.html" target="_blank">How amounts are indexed to inflation</a></p>
 
-    <h2 id="toc2">2023 - Provincial and territorial rates</h2>
+    <h2 id="toc2">Provincial and territorial rates for 2023</h2>
     <p>Provincial and territorial tax rates vary across Canada.</p>
     <p>Your provincial or territorial tax rate is determined by the location in which you are living on December 31 of the tax year.</p>
     <div class="wb-frmvld fieldflow-lg max-content">
