--- a/guides/alberta/onepager.html
+++ b/guides/alberta/onepager.html
@@ -72,7 +72,7 @@
 			
                <h1 property="name" id="wb-cont" class="gc-thickline">Alberta: Personal income tax 2022</h1>
                      <p class="mrgn-tp-md"><mark>Alberta's personal income tax is administered by the Canada Revenue Agency (CRA).  Your Alberta tax return is submitted with your federal tax return.  CRA will process both.</mark></p>
-			 <div class="col-md-4 pull-right rp">
+			 <div class="col-sm-4 pull-right">
                      <div class="thumbnail p-sm-3">
                     
                            <h2 class="mrgn-tp-0" id="h-3">PDF version</h2>
@@ -88,6 +88,7 @@
                            </p>
                         </div>
                      </div>
+					 <div class="clearfix visible-xs"></div>
 			  <h2 class="h3">On this page</h2>
 			  <ul>
 			  <li><a href="#h-1">What's new</a>
