add <hr> for mobile

--- a/guides/alberta/onepager.html
+++ b/guides/alberta/onepager.html
@@ -162,6 +162,7 @@
   <li class="cnjnctn-col">
     <h4 class="mrgn-tp-sm text-muted"><span class="far fa-file text-muted"></span>  Form T2203, Provincial and Territorial Taxes for Multiple Jurisdictions<span class="wb-inv">: Option 2</span></h4>
     <p>Complete <a href="/en/revenue-agency/services/forms-publications/forms/t2203.html">Form T2203, Provincial and Territorial Taxes for Multiple Jurisdictions</a> <strong>instead</strong> of <span class="nowrap">Form AB428,</span> if:</p>
+	<hr class="brdr-bttm visible-xs">
 <ul class="list-unstyled cnjnctn-type-or  brdr-0  mrgn-lft-lg">
   <li class="cnjnctn-col-40"><strong>Both</strong> of the following apply:
 <ul class="fa-ul">
@@ -174,6 +175,7 @@
 <li><span class="fas fa-check text-success fa-li"></span> You were a non-resident of Canada throughout 2022</li>
 <li><span class="fas fa-check text-success fa-li"></span> You were carrying on business in <strong>more than one</strong> province or territory in Canada or were receiving income from an office or employment that can reasonably be attributed to duties performed in <strong>more than one</strong> province or territory in Canada</li>
 </ul>
+<hr class="brdr-bttm visible-xs mrgn-bttm-md">
 </li>
 </ul>
   </li>
