added list steps

--- a/guides/alberta/onepager.html
+++ b/guides/alberta/onepager.html
@@ -128,14 +128,16 @@
 </dl>
 
 			    <h2 id="h-3">Get the necessary forms</h2>
-				<h3>Options</h3>
+				<ol class="lst-stps ld-zr">
+				<li>
+				<h3>Find out where to get the forms</h3>
 	<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
   <li class="cnjnctn-col">
-    <h4 class="mrgn-tp-sm text-muted"><mark><span class="fas fa-laptop"></span> Using certified software<span class="wb-inv">: Option 1</span></mark></h4>
+    <h4 class="mrgn-tp-sm text-muted"><mark><span class="fas fa-laptop"></span> Use certified software<span class="wb-inv">: Option 1</span></mark></h4>
     <p><mark>Forms are automatically generated for you when you use <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/netfile-overview/certified-software-netfile-program.html">certified tax software</a></mark></p>
   </li>
   <li class="cnjnctn-col">
-    <h4 class="mrgn-tp-sm text-muted"><mark><span class="fas fa-print"></span> Using paper forms<span class="wb-inv">: Option 2</span></mark></h4>
+    <h4 class="mrgn-tp-sm text-muted"><mark><span class="fas fa-print"></span> Use paper forms<span class="wb-inv">: Option 2</span></mark></h4>
     <p>You can download and print a the appropriate form</p>
   </li>
   <li class="cnjnctn-col">
@@ -143,7 +145,8 @@
     <p><mark>Refer to: <a href="https://www.canada.ca/en/services/taxes/income-tax/personal-income-tax/get-ready-taxes/ways.html">Ways to do your taxes</a></mark></li>
                 </li>          
                         </ul>
-
+</li>
+<li>
 <h3><mark>Determine which form to use</mark></h3>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -189,7 +192,6 @@
 
 
 
-
     <h4>Defintions</h4>
 
 <details><summary class="wb-toggle" data-toggle='{"print": "on"}'>Spouse</summary> refers to a person you are legally married to.&nbsp;</p>
@@ -209,7 +211,9 @@ Common-law partner </summary>refers to a person who is not your spouse, but with
 <li>the date you left Canada if you emigrated <span class="nowrap">in 2022</span></li>
 <li>the date of death for a person who died<span class="nowrap"> in 2022</span></li>
 </ul>
-</details>
+</details></li>
+</ol>
+
 				 <h2 id="h-4">Complete the forms</h2>
 				    <ol class="lst-stps ld-zr">
 		<li><h3><mark>Fill out</mark>Part A – Alberta tax on taxable income</h3>
