--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -188,14 +188,14 @@
 	  
 	  
 	 
-    <p>Taxable income is your income after various deductions, credits, and exemptions have been applied. It is line 26000 of your Income Tax and Benefit Return.</p>
+    <p><strong>Taxable income</strong> is your income after various deductions, credits, and exemptions have been applied. It is <strong>line 26000</strong> of your Income Tax and Benefit Return.</p>
 	  
     <h2 id="toc1">Federal rates for 2023</h2>
 	  <p>The Government of Canada sets the federal income tax rates for individuals.</p>
 	   
 	
 	  <details>
-		  <summary class="max-content">If your taxable income is below $15,000 (basic personal amount)</summary>
+		  <summary class="max-content">If your taxable income is below $15,000 <strong>(basic personal amount)</strong></summary>
 		  <p>The basic personal amount (BPA) is $15,000 for the 2023 tax year, and indexed to inflation for subsequent years.</p>
 		  <p>The purpose of the BPA is to provide a <strong>full reduction</strong> from federal income tax to all individuals with taxable income <strong>below</strong> the BPA.</p>
 		  <p>The BPA is a non-refundable tax credit that can be claimed by all individuals. It also provides a partial reduction to taxpayers with taxable income above the BPA.</p>
@@ -278,7 +278,7 @@
     <p>Federal taxes and provincial and territorial taxes (except Quebec) are calculated the same way.</p>
     <p>You should calculate the federal tax first, then calculate your provincial or territorial tax.</p>
 	  <p>You must add your federal tax amount and provincial or territorial tax amounts together to get your <strong>combined tax rate</strong>.</p>
-	  <p>Your combined tax rate is the total tax you will pay for the calendar year. Generally, most employers will deduct both federal income tax and provincial and territorial income tax directly from your pay.</p>
+	  <p>Your combined tax rate is the total tax you will pay for the calendar year. Generally, most employers will deduct both federal income tax and provincial or territorial income tax directly from your pay.</p>
     <div class="row mrgn-bttm-lg">
       <div class="col-sm-6 col-md-5">
         <p class="h3">To calculate the tax:</p>
