remove 2 max-contetn

--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -195,7 +195,7 @@
 	   
 	
 	  <details>
-		  <summary class="max-content">If your taxable income is below $15,000 <strong>(basic personal amount)</strong></summary>
+		  <summary>If your taxable income is below $15,000 <strong>(basic personal amount)</strong></summary>
 		  <p>The basic personal amount (BPA) is $15,000 for the 2023 tax year, and indexed to inflation for subsequent years.</p>
 		  <p>The purpose of the BPA is to provide a <strong>full reduction</strong> from federal income tax to all individuals with taxable income <strong>below</strong> the BPA.</p>
 		  <p>The BPA is a non-refundable tax credit that can be claimed by all individuals. It also provides a partial reduction to taxpayers with taxable income above the BPA.</p>
@@ -304,7 +304,7 @@
 
 	
     <details>
-      <summary class="max-content">Calculation for 2023 combined tax rate on taxable income of $49,000</summary>
+      <summary>Calculation for 2023 combined tax rate on taxable income of $49,000</summary>
       <p>In <strong>2023</strong>, Ellis lives in <strong>Ontario</strong> and has a taxable income of <strong>$49,000</strong>. Ellis’ tax calculation would be as follows:</p>
       <p class="h3">Federal tax</p>
 	    
@@ -353,7 +353,7 @@
 
 	  
     <details>
-      <summary class="max-content">Calculation for 2023 combined tax rate on taxable income of $78,000</summary>
+      <summary>Calculation for 2023 combined tax rate on taxable income of $78,000</summary>
       <p>In <strong>2023</strong>, Quinn lives in <strong>Saskatchewan</strong> and has a taxable income of <strong>$78,000</strong>. Quinn’s tax calculation would be as follows:</p>
   <p class="h3">Federal tax</p>
       <p>The first $53,359 is taxed at 15% (the first tax threshold), which equals $8,003.85.</p>
