--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -189,6 +189,9 @@
 	  
 	 
     <p><strong>Taxable income</strong> is your income after various deductions, credits, and exemptions have been applied. It is <strong>line 26000</strong> of your Income Tax and Benefit Return.</p>
+	  <p>Your <strong>combined tax rate</strong> is the total tax you will pay for the calendar year.</p>
+	  <p>Generally, most employers will deduct both federal income tax and provincial or territorial income tax directly from your pay. You can choose to have more tax deducted from your pay by completing a Form TD1 and providing it to your employer. Increasing your income tax deduction can avoid you having to pay a large amount of tax at the end of the tax year.</p>
+  <p><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/income-tax/increasing-income-tax-deductions.html" target="_blank">Increasing income tax deductions</a></p>
 	  
     <h2 id="toc1">Federal rates for 2023</h2>
 	  <p>The Government of Canada sets the federal income tax rates for individuals.</p>
@@ -278,8 +281,7 @@
     <p>Federal taxes and provincial and territorial taxes (except Quebec) are calculated the same way.</p>
     <p>You should calculate the federal tax first, then calculate your provincial or territorial tax.</p>
 	  <p>You must add your federal tax amount and provincial or territorial tax amounts together to get your <strong>combined tax rate</strong>.</p>
-	  <p>Your combined tax rate is the total tax you will pay for the calendar year. Generally, most employers will deduct both federal income tax and provincial or territorial income tax directly from your pay.</p>
-    <div class="row mrgn-bttm-lg">
+	    <div class="row mrgn-bttm-lg">
       <div class="col-sm-6 col-md-5">
         <p class="h3">To calculate the tax:</p>
 <ol class="lst-spcd">
