--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -403,13 +403,27 @@
 	     </ul>
     </details>
 
-	  
-    
-<br>
- <p>Step 5 of the Income Tax and Benefit Return is where to calculate your federal tax on taxable income. Federal non-refundable tax credits are also calculated on this return.</p>
-    <p>Form 428 within your respective province or territory’s income tax package is used to calculate your provincial or territorial tax on taxable income. Provincial and territorial non-refundable tax credits are also calculated on Form 428.</p>
-    <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package.html" target="_blank">T1 Income tax packages</a></p>
+ <p>Your income tax package will include:</p>
+
+
+  <ul class="cnjnctn-type-or cnjnctn-sm">
+      <li class="cnjnctn-col">
+	      <h4 class="mrgn-tp-sm text-muted">Income Tax and Benefit Return<span class="wb-inv"></span></h4>
+        <p>Calculate your federal tax on taxable income (Step 5)</p>
+      </li>
+      <li class="cnjnctn-col">
+	       <h4 class="mrgn-tp-sm text-muted">Form 428<span class="wb-inv"></span></h4>
+        <p>Calculate your provincial or territorial tax on taxable income</p>
+      </li>
+  </ul>
+   <br>
+	<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package.html" target="_blank">T1 Income tax packages</a></p>
    
+
+
+
+	
+
 	  
     <h2 id="toc4">Previous years</h2>
     <p>Select the tax year to see the federal rate, then select the province or territory to see its rate.</p>
