--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -407,7 +407,7 @@
  <p>Your income tax package will include:</p>
 
 
-  <ul class="cnjnctn-type-or cnjnctn-sm">
+  <ul class="cnjnctn-type-and cnjnctn-sm">
       <li class="cnjnctn-col">
 	      <h4 class="mrgn-tp-sm text-muted">Income Tax and Benefit Return<span class="wb-inv"></span></h4>
         <p>Calculate your federal tax on taxable income (Step 5)</p>
