--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -359,11 +359,12 @@
       <summary>Calculation for 2023 combined tax rate on taxable income of $78,000</summary>
       <p>In <strong>2023</strong>, Quinn lives in <strong>Saskatchewan</strong> and has a taxable income of <strong>$78,000</strong>. Quinn’s tax calculation would be as follows:</p>
   <p class="h3">Federal tax</p>
-       <p>Subtract $53,359 from $49,000 ($49,000 – $53,359 = -$4,359). </p>
-      <p>The calculation cannot result in a negative number. If it does, the base amount is "0". </p>
-      <p>$49,000 is taxed at 15% which is the first tax threshold ($49,000 x 0.15 = $7,350). </p>
-	    <p>Since the base amount is “0”, there is no tax on the tax rate. </p>
-	    <p>The federal income tax Ellis owes is $7,350.</p>
+	      <p>The first $53,359 is taxed at 15% which is the first tax threshold ($53,359 x 0.15 = $8,003.85). </p>
+       <p>Subtract $53,359 from $78,000 ($78,000 – $53,359 = $24,641). </p>
+	    <p>The remaining amount of $24,641 is taxed at 20.5% which is the second tax threshold ($24,641 x 0.205 = $5,051.41)
+<p>Add 
+ <p>The federal income tax Ellis owes is $7,350.</p>
+	    
       <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
         <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="h6">$49,000 (Taxable income)</span></li>
         <li class="brdr-bttm" ><span class="fa-li"><span class="h2">-</span><span class="wb-inv">minus </span></span><span class="h6">$0 (Base amount of the tax threshold)</span> </li>
