--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -288,7 +288,7 @@
 <ol class="lst-spcd">
     <li>Subtract the base amount of the tax threshold from the taxable income</li>
     <li>Multiply that result by the tax rate</li>
-    <li>Add that result to the tax amount on the tax rate</li>
+    <li>Add that result to the tax amount on the tax rate(s)</li>
   </ol>
  
       </div>
@@ -299,7 +299,7 @@
           <li class="bg-info"><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">($)</span></li>
           <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-times fa-lg"></span><span class="wb-inv">times </span></span><span class="text-muted h5">Tax rate</span></li>
           <li class="bg-info"><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">($)</span></li>
-          <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-plus fa-lg"></span><span class="wb-inv">plus </span></span><span class="text-muted h5">Tax amount on the tax rate</span> </li>
+          <li class="brdr-bttm"><span class="fa-li"><span class="fas fa-plus fa-lg"></span><span class="wb-inv">plus </span></span><span class="text-muted h5">Tax amount on the tax rate(s)</span> </li>
           <li class="bg-success"><span class="fa-li"><span class="fas fa-equals fa-lg"></span><span class="wb-inv">equals </span></span> <span class="text-muted h5">Tax owed</span><span class="fa-stack text-success pull-right"><span class="fas fa-circle fa-stack-2x"></span><span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span></span></li>
         </ul>
       </div>
@@ -359,20 +359,20 @@
       <summary>Calculation for 2023 combined tax rate on taxable income of $78,000</summary>
       <p>In <strong>2023</strong>, Quinn lives in <strong>Saskatchewan</strong> and has a taxable income of <strong>$78,000</strong>. Quinn’s tax calculation would be as follows:</p>
   <p class="h3">Federal tax</p>
-	      <p>The first $53,359 is taxed at 15% which is the first tax threshold ($53,359 x 0.15 = $8,003.85). </p>
+	      <p>The first $53,359 is taxed at 15% which is the first tax threshold ($53,359 x 0.15 = $8,003.85). This is the tax amount to add in the calcualtion.</p>
        <p>Subtract $53,359 from $78,000 ($78,000 – $53,359 = $24,641). </p>
-	    <p>The remaining amount of $24,641 is taxed at 20.5% which is the second tax threshold ($24,641 x 0.205 = $5,051.41)
-<p>Add 
- <p>The federal income tax Ellis owes is $7,350.</p>
+	    <p>The remaining $24,641 is taxed at 20.5% which is the second tax threshold ($24,641 x 0.205 = $5,051.41).</p>
+<p>Add that result to the tax amount on the previous threshold's tax rate ($5,051.41 + $8,003.85 = $13,055.26)
+ <p>The federal income tax Quinn owes is $13,055.26.</p>
 	    
       <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
-        <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="h6">$49,000 (Taxable income)</span></li>
-        <li class="brdr-bttm" ><span class="fa-li"><span class="h2">-</span><span class="wb-inv">minus </span></span><span class="h6">$0 (Base amount of the tax threshold)</span> </li>
-        <li class="bg-info"><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$49,000</span></li>
-        <li class="brdr-bttm"><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">15% (Tax rate)</span></li>
+        <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="h6">$78,000 (Taxable income)</span></li>
+        <li class="brdr-bttm" ><span class="fa-li"><span class="h2">-</span><span class="wb-inv">minus </span></span><span class="h6">$53,359 (Base amount of the tax threshold)</span> </li>
+        <li class="bg-info"><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$24,641</span></li>
+        <li class="brdr-bttm"><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">20.5% (Tax rate)</span></li>
         <li class="bg-info"><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$7,350</span></li>
-        <li class="brdr-bttm"><span class="fa-li"><span class="h2">+</span><span class="wb-inv">plus </span></span><span class="h6">$0 (Tax on 15%)</span> </li>
-        <li class="bg-success"><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6"><strong>$7,350</strong> (Total federal income tax owed)</span></li>
+        <li class="brdr-bttm"><span class="fa-li"><span class="h2">+</span><span class="wb-inv">plus </span></span><span class="h6">$5,051.41 (Tax amount on the previous tax rate)</span> </li>
+        <li class="bg-success"><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6"><strong>$13,055.26</strong> (Total federal income tax owed)</span></li>
       </ul>
 
 	    
