--- a/jmlt333/tax-rates-individuals.html
+++ b/jmlt333/tax-rates-individuals.html
@@ -322,7 +322,7 @@
         <li class="bg-info"><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$49,000</span></li>
         <li class="brdr-bttm"><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">15% (Tax rate)</span></li>
         <li class="bg-info"><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$7,350</span></li>
-        <li class="brdr-bttm"><span class="fa-li"><span class="h2">+</span><span class="wb-inv">plus </span></span><span class="h6">$0 (Tax on 15%)</span> </li>
+        <li class="brdr-bttm"><span class="fa-li"><span class="h2">+</span><span class="wb-inv">plus </span></span><span class="h6">$0 (Tax amount on the tax rate)</span> </li>
         <li class="bg-success"><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6"><strong>$7,350</strong> (Total federal income tax owed)</span></li>
       </ul>
 
