--- a/fhsa/v4/out.html
+++ b/fhsa/v4/out.html
@@ -223,14 +223,14 @@
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h3>A qualifying withdrawal</h3>
-<p>when you withdraw from your FHSA to buy a home and <a href="out.html#h-2">meet all the conditions for a qualifying withdrawal</a></p>
+<p>when you withdraw from your FHSA to buy a home and <a href="out.html#h-1-1">meet all the conditions for a qualifying withdrawal</a></p>
 </li>
 <li class="cnjnctn-col"><h3>A designated amount</h3>
-	<p>when you withdraw or transfer from your FHSA because you <a href="out.html#h-4">contributed or transferred too much</a> and have an excess amount</p></li>
+	<p>when you withdraw or transfer from your FHSA because you <a href="out.html#h-1-2">contributed or transferred too much</a> and have an excess amount</p></li>
 
 </li>
 <li class="cnjnctn-col"><h3>A direct transfer</h3>
-<p>when you  <a href="out.html#h-5">transfer from your FHSA to your RRSPs or RRIFs</a></p>
+<p>when you  <a href="out.html#h-1-3">transfer from your FHSA to your RRSPs or RRIFs</a></p>
 </li>
 </ul>
 <p>A withdrawal or transfer from an FHSA <strong>must be included as income</strong> on your income tax and benefit return if it is a taxable withdrawal. When your withdrawal is not a qualifying withdrawal, designated amount, or an amount otherwise included in your income it is a  <a href="out.html#h-2">taxable withdrawal.</a></p></p>
