--- a/fhsa/v4/lifeevents.html
+++ b/fhsa/v4/lifeevents.html
@@ -1059,7 +1059,7 @@ Other reason
 
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-<script src="/etc/designs/canada/wet-boew/js/ep-pp.min.js"></script>
+<script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/ep-pp.min.js"></script>
 <script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/wet-boew.min.js"></script> 
 <script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/theme.min.js"></script>
 
