--- a/fhsa/v4/out.html
+++ b/fhsa/v4/out.html
@@ -915,7 +915,7 @@
 <h3 class="modal-title">Property</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#propfhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#propfhsa"></section>
 </div>
 </section>
 
