--- a/fhsa/v4/out.html
+++ b/fhsa/v4/out.html
@@ -762,7 +762,7 @@
 <h3 class="modal-title">Allowable FHSA deduction</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#allowablefhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#allowablefhsa"></section>
 </div>
 </section>
 
@@ -771,7 +771,7 @@
 <h3 class="modal-title">Annual FHSA limit</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#annualfhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#annualfhsa"></section>
 </div>
 </section>
 
@@ -780,7 +780,7 @@
 <h3 class="modal-title">Annuitant</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#annuitant"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#annuitant"></section>
 </div>
 </section>
 
@@ -789,7 +789,7 @@
 <h3 class="modal-title">Common-law partner</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#comlaw"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#comlaw"></section>
 </div>
 </section>
 
@@ -798,7 +798,7 @@
 <h3 class="modal-title">Designated amounts</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#designatedamounts"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#designatedamounts"></section>
 </div>
 </section>
 
@@ -807,7 +807,7 @@
 <h3 class="modal-title">Excess FHSA amount</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#excessfhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#excessfhsa"></section>
 </div>
 </section>
 
@@ -816,7 +816,7 @@
 <h3 class="modal-title">Exempt period</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#exemptperiod"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#exemptperiod"></section>
 </div>
 </section>
 
@@ -825,7 +825,7 @@
 <h3 class="modal-title">Fair market value (FMV)</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fmv"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fmv"></section>
 </div>
 </section>
 
@@ -834,7 +834,7 @@
 <h3 class="modal-title">FHSA carryforward</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsacarry"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsacarry"></section>
 </div>
 </section>
 
@@ -843,7 +843,7 @@
 <h3 class="modal-title">FHSA deduction</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsadeduction"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsadeduction"></section>
 </div>
 </section>
 
@@ -852,7 +852,7 @@
 <h3 class="modal-title">FHSA participation room</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsapartroom"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsapartroom"></section>
 </div>
 </section>
 
@@ -861,7 +861,7 @@
 <h3 class="modal-title">First-time home buyer</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#firsttimehb"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#firsttimehb"></section>
 </div>
 </section>
 
@@ -870,7 +870,7 @@
 <h3 class="modal-title">Holder</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#holder"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#holder"></section>
 </div>
 </section>
 
@@ -879,7 +879,7 @@
 <h3 class="modal-title">Issuer</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#issuer"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#issuer"></section>
 </div>
 </section>
 
@@ -888,7 +888,7 @@
 <h3 class="modal-title">Lifetime FHSA limit</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#lifetimefhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#lifetimefhsa"></section>
 </div>
 </section>
 
@@ -897,7 +897,7 @@
 <h3 class="modal-title">Maximum participation period</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#maxpart"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#maxpart"></section>
 </div>
 </section>
 
@@ -906,7 +906,7 @@
 <h3 class="modal-title">Non-qualified investment</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#nonqualinv"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#nonqualinv"></section>
 </div>
 </section>
 
@@ -924,7 +924,7 @@
 <h3 class="modal-title">Qualified donee</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualdonee"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualdonee"></section>
 </div>
 </section>
 
@@ -933,7 +933,7 @@
 <h3 class="modal-title">Qualified investment</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualinv"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualinv"></section>
 </div>
 </section>
 
@@ -942,7 +942,7 @@
 <h3 class="modal-title">Qualifying home</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualhome"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualhome"></section>
 </div>
 </section>
 
@@ -951,7 +951,7 @@
 <h3 class="modal-title">Qualifying individual</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualindividual"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualindividual"></section>
 </div>
 </section>
 
@@ -960,7 +960,7 @@
 <h3 class="modal-title">Qualifying withdrawal</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualwith"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualwith"></section>
 </div>
 </section>
 
@@ -969,7 +969,7 @@
 <h3 class="modal-title">Registered retirement income fund (RRIF)</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#rrif"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#rrif"></section>
 </div>
 </section>
 
@@ -978,7 +978,7 @@
 <h3 class="modal-title">Registered retirement saving plan (RRSP)</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#rrsp"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#rrsp"></section>
 </div>
 </section>
 
@@ -987,7 +987,7 @@
 <h3 class="modal-title">Spouse</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#spouse"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#spouse"></section>
 </div>
 </section>
 
@@ -996,7 +996,7 @@
 <h3 class="modal-title">Successor holder</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#successorholder"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#successorholder"></section>
 </div>
 </section>
 
@@ -1005,7 +1005,7 @@
 <h3 class="modal-title">Survivor</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#survivor"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#survivor"></section>
 </div>
 </section>
 
@@ -1014,7 +1014,7 @@
 <h3 class="modal-title">Unused FHSA contributions</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedfhsacont"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedfhsacont"></section>
 </div>
 </section>
 
@@ -1023,7 +1023,7 @@
 <h3 class="modal-title">Unused FHSA participation room</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedfhsapart"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedfhsapart"></section>
 </div>
 </section>
 
@@ -1032,7 +1032,7 @@
 <h3 class="modal-title">Unused RRSP deduction room</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedrrsp"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedrrsp"></section>
 </div>
 </section>
 
