--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -697,7 +697,7 @@
 <h3 class="modal-title">Qualified investment</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="test.canada.ca/cra-arc/fhsa/v4/definitions.html#qualinv"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualinv"></section>
 </div>
 </section>
 
